--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
   overflow-x: hidden;
 }
 
+section {
+  padding-bottom: 10px;
+}
+
 #main {
   width: 100vw;
   height: 100vh;
@@ -47,7 +51,7 @@ body {
   padding-top: 35vh;
 }
 
-#title {
+.title {
   text-align: center;
   margin: 0;
   padding: 0;
@@ -57,6 +61,10 @@ body {
   font-size: 60px;
 }
 
+/* .hr {
+  margin-bottom: -19px;
+} */
+
 #portfolio {
   width: 100%;
   height: 100vh;
@@ -65,6 +73,10 @@ body {
 #contact {
   width: 100%;
   height: 100vh;
+}
+
+nav {
+  height: 75px;
 }
 
 .nav-link {
