--- a/lights.css
+++ b/lights.css
@@ -9,10 +9,12 @@ body {
 
 h1 {
 	text-align: center;
+	font-size: 20px;
 }
 
 p {
 	text-align: center;
+	font-size: 12px;
 }
 
 #mario {
@@ -41,7 +43,7 @@ p {
 
 img {
 	display: inline;
-	height: 300px;
+	height: 200px;
 	margin-left: 35%;
 	margin-top: 100px;
 }
